--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 THIS IS THE README FOR Bishop Eustace Git REPO!!!
 
+The latest code sits in FRCProject/bert.
+Note that the code used to sit in FRCProject_Netbeans_2014, but we no longer use this code and should only be used as a reference.
